--- a/hawtio-web/src/main/webapp/css/site-base.css
+++ b/hawtio-web/src/main/webapp/css/site-base.css
@@ -29,7 +29,7 @@ small table tbody tr td.property-name {
   right: 30px;
   bottom: 50%;
   z-index: 10000;
-  opacity: 0.8;
+  background: inherit;
   transition: bottom 1s ease-in-out;
 }
 
